--- a/public/css/add-item.css
+++ b/public/css/add-item.css
@@ -26,6 +26,8 @@ input fields
 ==========================*/
 
 .field {
+	flex: 1;
+	position: relative;
 	display: flex;
 	align-items: center;
 }
@@ -34,10 +36,6 @@ input fields
 	display: inline-block;
 	width: 200px;
 	font-weight: 600;
-}
-
-input::placeholder {
-	color: #BBBBBB;
 }
 
 input {
@@ -55,8 +53,50 @@ input {
 	color: #333333;
 }
 
+input::placeholder {
+	color: #BBBBBB;
+}
+
 input::-webkit-calendar-picker-indicator {
 	opacity: 0;
+}
+
+/*==========================
+arrow
+==========================*/
+
+input[list]:focus + .arrow {
+	transform: rotateZ(180deg);
+}
+
+.arrow {
+	position: absolute;
+	width: 20px;
+	height: 20px;
+	right: 24px;
+	transition: .1s;
+}
+
+.arrow::before, .arrow::after {
+	position: absolute;
+	content: '';
+	width: 15px;
+	height: 3px;
+	top: 4px;
+	border-radius: 1in;
+	background: #333333;
+}
+
+.arrow::before {
+	left: 0;
+	transform-origin: left;
+	transform: rotateZ(45deg);
+}
+
+.arrow::after {
+	right: 0;
+	transform-origin: right;
+	transform: rotateZ(-45deg);
 }
 
 /*==========================
@@ -128,13 +168,13 @@ specifications
 	margin-bottom: 10px;
 }
 
-.category {
+.category-field {
 	display: flex;
 	align-items: center;
 }
 
 .input-category {
-	font-weight: 700;
+	font-weight: 600;
 }
 
 .btn {
@@ -144,6 +184,11 @@ specifications
 	border-radius: 10px;
 	border: 2px solid #D9D9D9;
 	background: #fff;
+	font-weight: 500;
+}
+
+.btn:hover {
+	color: white;
 }
 
 .delete {
@@ -151,11 +196,21 @@ specifications
 	color: #DF0310;
 }
 
+.delete:hover {
+	background: #DF0310;
+	border-color: #DF0310;
+}
+
 .add {
 	margin-top: 5px;
 	margin-bottom: 20px;
 	width: 300px;
 	color: #009AFF;
+}
+
+.add:hover {
+	background: #009AFF;
+	border-color: #009AFF;
 }
 
 .add-category {
@@ -170,4 +225,9 @@ specifications
 .save {
 	margin-top: 20px;
 	color: #00AC47;
+}
+
+.save:hover {
+	background: #00AC47;
+	border-color: #00AC47;
 }
