--- a/public/css/catalog.css
+++ b/public/css/catalog.css
@@ -51,6 +51,8 @@ items
 	background: #FFFFFF;
 	box-shadow: 0 4px 6px rgba(0, 0, 0, 0.2);
 	border-radius: 10px;
+	text-decoration: none;
+	color: inherit;
 }
 
 .item-image {
