--- a/public/css/admin-main.css
+++ b/public/css/admin-main.css
@@ -19,20 +19,22 @@ nav {
 	width: 100%;
 	height: var(--nav-height);
 	display: flex;
-	background: #FFFFFF;
-	box-shadow: 0 2px 20px rgba(0, 0, 0, 0.2);
 	justify-content: space-between;
+	align-items: center;
+	background: #FFFFFF;
+	box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2);
 }
 
 .start {
 	display: flex;
+	align-items: center;
 }
 
 .logo {
 	fill: #F17F42;
 	width: 99px;
 	height: 50px;
-	margin: 10px 50px;
+	margin: 0 50px;
 }
 
 .nav-item {
@@ -88,7 +90,7 @@ sign-out
 ==========================*/
 
 .sign-out {
-	margin: 15px 50px;
+	margin: 0 50px;
 	height: 40px;
 	width: 70px;
 	line-height: 40px;
