--- a/public/css/main.css
+++ b/public/css/main.css
@@ -19,8 +19,9 @@ nav {
 	width: 100%;
 	height: var(--nav-height);
 	display: flex;
+	align-items: center;
 	background: #FFFFFF;
-	box-shadow: 0 2px 20px rgba(0, 0, 0, 0.2);
+	box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2);
 }
 
 .logo {
@@ -28,7 +29,7 @@ nav {
 	min-width: 99px;
 	width: 99px;
 	height: 50px;
-	margin: 10px 50px;
+	margin: 0 50px;
 }
 
 /*==========================
@@ -37,7 +38,6 @@ search
 
 .search {
 	display: flex;
-	margin: 10px 0;
 	height: 50px;
 	flex: 1;
 	border-radius: 10px;
@@ -93,7 +93,7 @@ sign-in
 ==========================*/
 
 .sign-in {
-	margin: 15px 50px;
+	margin: 0 50px;
 	height: 40px;
 	width: 70px;
 	line-height: 40px;
