--- a/public/css/catalog.css
+++ b/public/css/catalog.css
@@ -53,6 +53,12 @@ items
 	border-radius: 10px;
 	text-decoration: none;
 	color: inherit;
+	transition: .3s;
+}
+
+.item:hover {
+	box-shadow: 0 8px 6px rgba(0, 0, 0, 0.3);
+	transition: .3s;
 }
 
 .item-image {
@@ -66,7 +72,7 @@ items
 	display: flex;
 	justify-content: space-between;
 	flex-direction: column;
-	padding: 10px 30px 10px 0;
+	padding: 20px;
 	flex: 1;
 }
 
@@ -74,12 +80,18 @@ items
 	display: flex;
 	justify-content: space-between;
 	align-items: center;
+	font-size: 20px;
+	font-weight: 600;
+	margin-bottom: 10px;
+}
+
+.item-other-footer {
+	margin-top: 10px;
 }
 
 .add-to-favorites {
 	width: 30px;
 	height: 25px;
-
 	min-width: 30px;
 	fill: none;
 	stroke: #222222;
