--- a/public/css/item.css
+++ b/public/css/item.css
@@ -42,6 +42,11 @@
 	font-weight: bold;
 }
 
+.item-subtitle {
+	font-size: 24px;
+	font-weight: bold;
+}
+
 .item-main {
 	display: flex;
 	flex-direction: row;
@@ -119,8 +124,9 @@
 }
 
 .item-main-short-desc {
+	font-size: 20px;
 	width: 65%;
-	padding: 10px 20px;
+	padding: 10px 40px 10px 20px;
 }
 
 .item-main-buy {
@@ -198,6 +204,7 @@
 .item-main-description p {
 	padding: 30px 0;
 	line-height: 1.5;
+	font-size: 16px;
 }
 
 .item-main-reviews-header {
