--- a/public/css/catalog.css
+++ b/public/css/catalog.css
@@ -80,9 +80,12 @@ items
 	display: flex;
 	justify-content: space-between;
 	align-items: center;
-	font-size: 20px;
-	font-weight: 600;
 	margin-bottom: 10px;
+}
+
+.item-title {
+	font-size: 17px;
+	font-weight: 500;
 }
 
 .item-other-footer {
