--- a/public/css/main.css
+++ b/public/css/main.css
@@ -121,6 +121,8 @@ main {
 	min-height: calc(100vh - var(--nav-height));
 	top: var(--nav-height);
 	z-index: -1;
+	align-items: center;
+	background: #f6f6f6;
 }
 
 .footer {
