--- a/public/css/catalog.css
+++ b/public/css/catalog.css
@@ -13,7 +13,7 @@
 .filters-item-list-row {
 	flex: 1;
 	display: flex;
-	width: 100vw;
+	max-width: 1500px;
 }
 
 /*==========================
@@ -80,7 +80,7 @@ items
 	display: flex;
 	justify-content: space-between;
 	align-items: center;
-	font-size: 20px;
+	font-size: 17px;
 	font-weight: 600;
 	margin-bottom: 10px;
 }
