--- a/public/css/catalog.css
+++ b/public/css/catalog.css
@@ -141,3 +141,38 @@ items
 	font-weight: bold;
 	color: #333333;
 }
+
+.navigation {
+	display: flex;
+	flex-direction: row;
+	justify-content: center;
+	height: 60px;
+	margin: 50px;
+}
+
+.navigation-item {
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	height: 50px;
+	width: 50px;
+	border-radius: 50%;
+	font-size: 18px;
+}
+
+.navigation-page {
+	background-color: white;
+	color: black;
+	margin: 0 15px;
+	transition: .3s;
+}
+
+.navigation-page:hover {
+	box-shadow: 0 4px 6px rgba(0, 0, 0, 0.2);
+	transition: .3s;
+}
+
+.navigation-active {
+	background-color: #333;
+	color: white;
+}
