--- a/public/css/catalog.css
+++ b/public/css/catalog.css
@@ -10,25 +10,64 @@
 	font-size: 18px;
 }
 
+
+/*==========================
+filters
+==========================*/
+
 .filters-item-list-row {
 	flex: 1;
 	display: flex;
 	width: 100vw;
 }
 
-/*==========================
-filters
-==========================*/
-
 .filters-column {
+	display: flex;
 	width: 300px;
 	margin: 0 50px;
 }
 
 .filters {
+	display: flex;
 	width: 300px;
 	height: 300px;
 	background: #FFFFFF;
+	border-radius: 10px;
+	box-shadow: 0 4px 6px rgba(0, 0, 0, 0.2);
+}
+
+.filter-category {
+	display: flex;
+	width: 300px;
+
+	background: #FFFFFF;
+	margin-left: 22px;
+	margin-right: 23px;
+	flex-direction: column;
+	flex-wrap: nowrap;
+	align-items: flex-start;
+	justify-content: flex-start;
+}
+
+.price-category {
+	display: flex;
+	flex-direction: column;
+	width: 270px;
+
+}
+
+.filter-category-title{
+	margin-bottom: 15px;
+	margin-top: 18px;
+}
+
+.price-category-bodies {
+	display: flex;
+	justify-content: space-around;
+}
+.price-category-body{
+	width: 110px;
+	height: 40px;
 	border-radius: 10px;
 	box-shadow: 0 4px 6px rgba(0, 0, 0, 0.2);
 }
