--- a/public/css/admin-main.css
+++ b/public/css/admin-main.css
@@ -117,4 +117,6 @@ main {
 	min-height: calc(100vh - var(--nav-height));
 	top: var(--nav-height);
 	z-index: -1;
+	background: #f6f6f6;
+	justify-content: center;
 }
