--- a/public/css/item.css
+++ b/public/css/item.css
@@ -9,6 +9,7 @@ main {
 }
 
 .container {
+	flex: 1;
 	display: flex;
 	flex-direction: column;
 	padding: 0 50px;
@@ -42,6 +43,7 @@ item-header
 	margin-left: 15px;
 	justify-content: end;
 	align-items: center;
+	cursor: pointer;
 }
 
 .add-to-favorites-label {
@@ -128,11 +130,12 @@ scroll-menu
 	transition: .4s;
 	color: black;
 	text-decoration: none;
+	cursor: pointer;
 }
 
 .scroll-menu-item:hover {
 	background-color: #eee;
-	transition: .4s;
+	transition: .1s;
 }
 
 /*==========================
@@ -198,6 +201,7 @@ item-reviews
 	align-items: center;
 	color: inherit;
 	text-decoration: none;
+	cursor: pointer;
 }
 
 .star-icon {
