--- a/public/css/main.css
+++ b/public/css/main.css
@@ -100,6 +100,7 @@ sign-in
 	text-align: center;
 	border-radius: 10px;
 	border: 2px solid #D9D9D9;
+	cursor: pointer;
 }
 
 .sign-in:hover {
@@ -121,8 +122,8 @@ main {
 	min-height: calc(100vh - var(--nav-height));
 	top: var(--nav-height);
 	z-index: -1;
-	align-items: center;
 	background: #f6f6f6;
+	align-items: center;
 }
 
 .footer {
