--- a/public/css/catalog.css
+++ b/public/css/catalog.css
@@ -11,66 +11,6 @@
 }
 
 
-/*==========================
-filters
-==========================*/
-
-.filters-item-list-row {
-	flex: 1;
-	display: flex;
-	max-width: 1500px;
-}
-
-.filters-column {
-	display: flex;
-	width: 300px;
-	margin: 0 50px;
-}
-
-.filters {
-	display: flex;
-	width: 300px;
-	height: 300px;
-	background: #FFFFFF;
-	border-radius: 10px;
-	box-shadow: 0 4px 6px rgba(0, 0, 0, 0.2);
-}
-
-.filter-category {
-	display: flex;
-	width: 300px;
-
-	background: #FFFFFF;
-	margin-left: 22px;
-	margin-right: 23px;
-	flex-direction: column;
-	flex-wrap: nowrap;
-	align-items: flex-start;
-	justify-content: flex-start;
-}
-
-.price-category {
-	display: flex;
-	flex-direction: column;
-	width: 270px;
-
-}
-
-.filter-category-title{
-	margin-bottom: 15px;
-	margin-top: 18px;
-}
-
-.price-category-bodies {
-	display: flex;
-	justify-content: space-around;
-}
-.price-category-body{
-	width: 110px;
-	height: 40px;
-	border-radius: 10px;
-	box-shadow: 0 4px 6px rgba(0, 0, 0, 0.2);
-}
 
 /*==========================
 items
@@ -215,3 +155,225 @@ items
 	background-color: #333;
 	color: white;
 }
+
+
+/*==========================
+filters
+==========================*/
+
+.filters-item-list-row {
+	flex: 1;
+	display: flex;
+}
+
+.filters-column {
+	display: flex;
+	width: 300px;
+	margin: 0 50px;
+}
+
+.filters {
+	display: inline-block;
+	width: 300px;
+	max-height: 100%;
+	background: #FFFFFF;
+	border-radius: 10px;
+	box-shadow: 0 4px 6px rgba(0, 0, 0, 0.2);
+}
+
+.filter-category {
+	display: flex;
+	width: 300px;
+
+	background: #FFFFFF;
+	margin-left: 22px;
+	margin-right: 23px;
+	flex-direction: column;
+	flex-wrap: nowrap;
+	align-items: flex-start;
+	justify-content: flex-start;
+}
+
+.price-category {
+	display: flex;
+	flex-direction: column;
+	width: 270px;
+
+}
+
+.filter-category-title{
+	margin-bottom: 15px;
+	margin-top: 18px;
+}
+
+.price-category-bodies {
+	display: flex;
+	justify-content: space-around;
+}
+.price-category-body{
+	width: 110px;
+	height: 40px;
+	border-radius: 10px;
+	box-shadow: 0 4px 6px rgba(0, 0, 0, 0.2);
+}
+
+
+
+
+form{
+	overflow:hidden;
+}
+input .price-category-body-int{
+	outline: 0;
+	outline-offset: 0;
+	border: 0px;
+	font-family: 'Open Sans', sans-serif;
+
+}
+
+.price-category-body-int{
+	width: 100px;
+	font-size: 20px;
+
+}
+
+
+
+
+.filter-category-specification {
+	font-family: 'Open Sans', sans-serif;
+}
+.filter-category-specification ul {
+	list-style: none;
+	margin: 0;
+	padding: 0;
+}
+.filter-category-specification ul li {
+	position: relative;
+	margin: 0;
+	line-height: 30px;
+}
+.filter-category-specification-group{
+	display: flex;
+	flex-direction: row;
+	align-content: center;
+	justify-content: flex-start;
+	align-items: center;
+}
+.filter-category-count{
+	margin-left: 5px;
+}
+
+.filter-category-specification-line {
+	margin-top: 10px;
+	border-top:1px solid;
+	box-shadow: 0 4px 6px rgba(0, 0, 0, 0.2);
+}
+
+
+.filter-category-specification .filter-category-sub-specification, .filter-category-label {
+	top: 0;
+	right: -40px;
+	position: absolute;
+	cursor: pointer;
+}
+.filter-category-specification .filter-category-sub-specification.plus,
+.filter-category-label:before,
+.filter-category-specification .filter-category-sub-specification.minus,
+.filter-category-sub-specification:checked + .filter-category-label:before {
+	content: '+';
+	font-size: 26px;
+	color: #1266B1;
+	font-weight: bold;
+	font-family: Courier;
+	padding-left: 100px;
+}
+.filter-category-specification .filter-category-sub-specification.minus, .filter-category-sub-specification:checked + .filter-category-label:before {
+	content: '-';
+}
+.filter-category-specification a {
+	color: red;
+	font-size: 16px;
+	text-decoration:none;
+}
+.filter-category-specification ul li li a {
+	color: #666;
+	font-size: 15px;
+	font-weight:normal;
+	text-decoration:none;
+
+}
+.filter-category-specification a.filter-category-active {
+	color: #000000;
+	font-family: 'Open Sans', sans-serif;
+	text-transform: none;
+
+}
+
+.filter-category-specification a:hover {
+	text-decoration: none;
+	color: red !important;
+}
+
+
+.filter-category-specification > ul > li ul {
+	display: none;
+}
+.filter-category-specification > ul > li a.filter-category-active + span + ul {
+	display: block !important;
+}
+.filter-category-specification > ul > li .filter-category-sub-specification:checked ~ ul {
+	display: block !important;
+}
+.filter-category-specification input[type=checkbox].filter-category-sub-specification {
+	display:none;
+}
+.filter-category-specification ul li li a:before {
+	content: '+';
+	font-size: 20px;
+	padding-right: 6px;
+	color: #666;
+	font-weight: bold;
+}
+.filter-category-specification > ul li li a:hover:before {
+	color: #000;
+}
+
+
+
+
+.switch {
+	height: 20px;
+	position: relative;
+	margin: 5px;
+
+	display: inline-block;
+}
+
+.switch label {
+	display: block;
+	width: 100%;
+	height: 100%;
+	position: relative;
+	background: #eaeaea;
+	border-radius: 10%;
+	box-shadow:
+		0 3px 5px rgba(0,0,0,0.25),
+		inset 0 1px 0 rgba(255,255,255,0.3),
+		inset 0 -5px 5px rgba(100,100,100,0.1),
+		inset 0 5px 5px rgba(255,255,255,0.3);
+}
+.switch input {
+	position: absolute;
+	width: 100%;
+	height: 100%;
+	z-index: 100;
+	opacity: 0;
+	cursor: pointer;
+}
+
+
+.switch input:checked ~ label { /* Button */
+	background: linear-gradient(#be9030, #d08607);
+}
+
