--- a/public/css/add-item.css
+++ b/public/css/add-item.css
@@ -14,9 +14,13 @@
 }
 
 .popup {
+	position: fixed;
 	height: 40px;
 	line-height: 40px;
-	margin: 20px auto;
+	left: 50%;
+	bottom: 30px;
+	transform-origin: center;
+	transform: translateX(-50%);
 	padding: 0 20px;
 	border-radius: 1in;
 	color: #ffffff;
