--- a/public/css/catalog.css
+++ b/public/css/catalog.css
@@ -155,17 +155,23 @@ items
 	display: flex;
 	align-items: center;
 	justify-content: center;
-	height: 50px;
-	width: 50px;
+	height: 40px;
+	width: 40px;
 	border-radius: 50%;
-	font-size: 18px;
+	font-size: 15px;
+	font-weight: 600;
 }
 
 .navigation-page {
 	background-color: white;
 	color: black;
-	margin: 0 15px;
+	margin: 0 10px;
 	transition: .3s;
+}
+
+.navigation-blocked {
+	pointer-events: none;
+	color: #dddddd;
 }
 
 .navigation-page:hover {
