--- a/public/css/login.css
+++ b/public/css/login.css
@@ -2,26 +2,62 @@
 	flex: 1;
 	display: flex;
 	flex-direction: column;
-	justify-content: center;
 	align-items: center;
 }
-.incorrect-pass{
 
-}
-.sign-in-title {
-	font-size: 18px;
-	font-weight: 600;
-}
-
-.sign-in {
-	margin: 35px;
+.register-fields {
+	margin-top: 30px;
 	display: flex;
 	flex-direction: column;
 }
 
-.input::placeholder {
-	color: #BBBBBB;
+.label-input{
+	display: flex;
+	flex-direction: row;
+	padding: 5px;
+	justify-content: flex-end;
 }
+.label-title{
+	margin: 10px;
+	padding-top: 20px;
+}
+
+.field{
+	display: flex;
+	flex-direction: column;
+	align-content: center;
+}
+
+.input-error{
+	display: flex;
+	flex-direction: column;
+	padding: 5px;
+	color:red;
+}
+.label-error{
+	margin:5px;
+	padding-left: 10px;
+}
+
+.register-fields > :last-child{
+	margin-bottom: 50px;
+}
+
+.sign-in-title {
+	font-size: 40px;
+	font-weight: 600;
+	margin-top: 30px;
+}
+
+/*.sign-in {*/
+/*	margin: 35px;*/
+/*	display: flex;*/
+/*	flex-direction: column;*/
+/*}*/
+
+/*.input::placeholder {*/
+/*	color: #BBBBBB;*/
+/*}*/
 
 .input {
 	width: 450px;
@@ -36,4 +72,32 @@
 	font-size: 15px;
 	font-family: 'Montserrat', sans-serif;
 	color: #333333;
+}
+
+.btn {
+	height: 40px;
+	line-height: 40px;
+	text-align: center;
+	border-radius: 10px;
+	border: 2px solid #D9D9D9;
+	background: #fff;
+	font-size: 15px;
+	font-family: 'Montserrat', sans-serif;
+}
+
+.btn:hover {
+	color: white;
+}
+
+.btn-save {
+	flex: 0;
+	width: 400px;
+	margin: 30px auto;
+}
+
+.btn-save:hover {
+	background: #F17F42;
+	border-color: #F17F42;
+	color: #ffffff;
+	font-weight: 500;
 }
