--- a/public/css/add-item.css
+++ b/public/css/add-item.css
@@ -1,3 +1,5 @@
+@import "btn.css";
+
 .form-container {
 	flex: 1;
 	display: flex;
@@ -169,42 +171,6 @@ specifications
 	font-weight: 600;
 }
 
-.btn {
-	height: 40px;
-	line-height: 40px;
-	text-align: center;
-	border-radius: 10px;
-	border: 2px solid #D9D9D9;
-	background: #fff;
-	font-weight: 500;
-}
-
-.btn:hover {
-	color: white;
-}
-
-.delete {
-	width: 200px;
-	color: #DF0310;
-}
-
-.delete:hover {
-	background: #DF0310;
-	border-color: #DF0310;
-}
-
-.add {
-	margin-top: 5px;
-	margin-bottom: 20px;
-	width: 300px;
-	color: #009AFF;
-}
-
-.add:hover {
-	background: #009AFF;
-	border-color: #009AFF;
-}
-
 .add-category {
 	margin: auto;
 }
@@ -212,17 +178,4 @@ specifications
 .spec {
 	display: flex;
 	align-items: center;
-}
-
-.btn-save {
-	flex: 0;
-	width: 400px;
-	margin: 30px auto;
-}
-
-.btn-save:hover {
-	background: #F17F42;
-	border-color: #F17F42;
-	color: #ffffff;
-	font-weight: 500;
 }
