--- a/public/css/admin-main.css
+++ b/public/css/admin-main.css
@@ -1,4 +1,5 @@
 @import "reset.css";
+@import "btn.css";
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700&display=swap');
 
 body {
@@ -15,26 +16,31 @@ nav
 ==========================*/
 
 nav {
+	box-sizing: border-box;
 	position: fixed;
 	width: 100%;
 	height: var(--nav-height);
 	display: flex;
-	justify-content: space-between;
 	align-items: center;
 	background: #FFFFFF;
+	padding: 0 50px;
 	box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2);
-}
-
-.start {
-	display: flex;
-	align-items: center;
 }
 
 .logo {
 	fill: #F17F42;
 	width: 99px;
 	height: 50px;
-	margin: 0 50px;
+	margin-right: 50px;
+}
+
+/*==========================
+nav-bar
+==========================*/
+
+.nav-bar {
+	flex: 1;
+	display: flex;
 }
 
 .nav-item {
@@ -83,27 +89,6 @@ menu
 
 .menu-item:hover {
 	background: #f7f7f7;
-}
-
-/*==========================
-sign-out
-==========================*/
-
-.sign-out {
-	margin: 0 50px;
-	height: 40px;
-	width: 70px;
-	line-height: 40px;
-	text-align: center;
-	border-radius: 10px;
-	border: 2px solid #D9D9D9;
-}
-
-.sign-out:hover {
-	font-weight: 500;
-	color: #FFFFFF;
-	border-color: #FF791E;
-	background: #FF791E;
 }
 
 /*==========================
