--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,4 +1,5 @@
 @import "reset.css";
+@import "btn.css";
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700&display=swap');
 
 body {
@@ -15,12 +16,14 @@ nav
 ==========================*/
 
 nav {
+	box-sizing: border-box;
 	position: fixed;
 	width: 100%;
 	height: var(--nav-height);
 	display: flex;
 	align-items: center;
 	background: #FFFFFF;
+	padding: 0 50px;
 	box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2);
 }
 
@@ -29,7 +32,7 @@ nav {
 	min-width: 99px;
 	width: 99px;
 	height: 50px;
-	margin: 0 50px;
+	margin-right: 50px;
 }
 
 /*==========================
@@ -40,6 +43,7 @@ search
 	display: flex;
 	height: 50px;
 	flex: 1;
+	margin-right: 30px;
 	border-radius: 10px;
 	background: #F2F2F2;
 }
@@ -86,28 +90,6 @@ search
 	height: 3px;
 	background: #AFAFAF;
 	border-radius: 50px;
-}
-
-/*==========================
-sign-in
-==========================*/
-
-.sign-in {
-	margin: 0 50px;
-	height: 40px;
-	width: 70px;
-	line-height: 40px;
-	text-align: center;
-	border-radius: 10px;
-	border: 2px solid #D9D9D9;
-	cursor: pointer;
-}
-
-.sign-in:hover {
-	font-weight: 500;
-	color: #FFFFFF;
-	border-color: #FF791E;
-	background: #FF791E;
 }
 
 /*==========================
