--- a/public/css/catalog.css
+++ b/public/css/catalog.css
@@ -52,8 +52,6 @@ items
 	background: #FFFFFF;
 	box-shadow: 0 4px 6px rgba(0, 0, 0, 0.2);
 	border-radius: 10px;
-	text-decoration: none;
-	color: inherit;
 	transition: .3s;
 }
 
@@ -62,12 +60,20 @@ items
 	transition: .3s;
 }
 
+/*==========================
+item-image
+==========================*/
+
 .item-image {
 	object-fit: contain;
 	height: 130px;
 	width: 130px;
 	margin: 10px;
 }
+
+/*==========================
+item-other
+==========================*/
 
 .item-other {
 	display: flex;
@@ -76,6 +82,10 @@ items
 	padding: 20px;
 	flex: 1;
 }
+
+/*==========================
+item-other-header
+==========================*/
 
 .item-other-header {
 	display: flex;
@@ -89,9 +99,24 @@ items
 	font-weight: 500;
 }
 
+.item-short-description {
+	color: #7D7D7D;
+}
+
+/*==========================
+item-other-footer
+==========================*/
+
 .item-other-footer {
 	margin-top: 10px;
+	display: flex;
+	align-items: center;
+	justify-content: space-between;
 }
+
+/*==========================
+add-to-favorites
+==========================*/
 
 .add-to-favorites {
 	width: 30px;
@@ -99,6 +124,7 @@ items
 	min-width: 30px;
 	fill: none;
 	stroke: #222222;
+	cursor: pointer;
 }
 
 .add-to-favorites:hover {
@@ -106,17 +132,12 @@ items
 	stroke: none;
 }
 
-.item-short-description {
-	color: #7D7D7D;
-}
-
-.item-other-footer {
-	display: flex;
-	align-items: center;
-	justify-content: space-between;
-}
+/*==========================
+rating
+==========================*/
 
 .rating {
+	flex: 1;
 	display: flex;
 	align-items: center;
 }
@@ -142,6 +163,10 @@ items
 	font-weight: bold;
 	color: #333333;
 }
+
+/*==========================
+paginator
+==========================*/
 
 .navigation {
 	display: flex;
@@ -182,4 +207,16 @@ items
 .navigation-active {
 	background-color: #333;
 	color: white;
+}
+
+/*==========================
+admin-btn-container
+==========================*/
+
+.admin-btn-container {
+	display: flex;
+}
+
+.admin-btn-container .btn {
+	margin: 0 10px;
 }
