--- a/public/css/404.css
+++ b/public/css/404.css
@@ -1,8 +1,10 @@
 .container {
+	position: relative;
 	flex: 1;
 	width: 100%;
 	display: flex;
 	flex-direction: column;
+	align-items: center;
 	max-width: 1300px;
 }
 
@@ -10,4 +12,9 @@
 	font-weight: 600;
 	font-size: 18px;
 	margin: 20px;
+}
+
+canvas {
+	position: absolute;
+	z-index: -1;
 }
