--- a/public/css/admin-main.css
+++ b/public/css/admin-main.css
@@ -1,5 +1,5 @@
 @import "reset.css";
-@import "btn.css";
+@import "lib/btn.css";
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700&display=swap');
 
 body {
