--- a/public/css/orders.css
+++ b/public/css/orders.css
@@ -5,7 +5,7 @@
 	display: flex;
 	flex-direction: column;
 	justify-content: space-between;
-	padding: 30px 50px;
+	padding: 15px 50px;
 	max-width: 1500px;
 }
 
@@ -16,6 +16,7 @@
 
 .order {
 	padding: 10px;
+	margin: 15px 0;
 }
 
 .order-line {
@@ -52,6 +53,6 @@
 	white-space: nowrap;
 }
 
-.item-price {
-	font-weight: 600;
+.order-total {
+	font-weight: 700;
 }
