--- a/public/css/add-item.css
+++ b/public/css/add-item.css
@@ -1,4 +1,5 @@
 @import "lib/btn.css";
+@import "input.css";
 
 .form-container {
 	flex: 1;
@@ -49,48 +50,6 @@ main fields and images
 	flex: 1;
 	display: flex;
 	flex-direction: column;
-}
-
-/*==========================
-input fields
-==========================*/
-
-.field {
-	flex: 1;
-	position: relative;
-	display: flex;
-	align-items: center;
-}
-
-.label-title {
-	display: inline-block;
-	width: 200px;
-	font-weight: 600;
-}
-
-input, select {
-	appearance:none;
-	flex: 1;
-	display: block;
-	height: 40px;
-	line-height: 40px;
-	padding: 0 10px;
-	margin: 5px 10px 5px 0;
-	border-radius: 10px;
-	border: 2px solid #D9D9D9;
-	background: #ffffff;
-	outline: none;
-	font-size: 15px;
-	font-family: 'Montserrat', sans-serif;
-	color: #333333;
-}
-
-input::placeholder {
-	color: #BBBBBB;
-}
-
-input::-webkit-calendar-picker-indicator {
-	opacity: 0;
 }
 
 /*==========================
