--- a/public/css/catalog.css
+++ b/public/css/catalog.css
@@ -114,6 +114,10 @@ item-other-footer
 	justify-content: space-between;
 }
 
+.display-order {
+	width: 30px;
+}
+
 /*==========================
 add-to-favorites
 ==========================*/
