--- a/public/css/orders.css
+++ b/public/css/orders.css
@@ -1,14 +1,81 @@
-@import 'lib/card.css';
-@import 'input.css';
+@import "lib/card.css";
+@import "lib/input.css";
+@import "lib/pagination.css";
 
 .container {
 	flex: 1;
 	display: flex;
 	flex-direction: column;
-	justify-content: space-between;
 	padding: 15px 50px;
 	max-width: 1500px;
 }
+
+/*==========================
+search
+==========================*/
+
+.search {
+	display: flex;
+	height: 40px;
+	line-height: 40px;
+	flex: 1;
+	border-radius: 10px;
+	background: #ffffff;
+	border: 2px solid #D9D9D9;
+}
+
+.search-field::placeholder {
+	color: #BBBBBB;
+}
+
+.search-field {
+	margin: 0;
+	flex: 1;
+	padding: 0 15px;
+	border-radius: 10px 0 0 10px;
+	background: transparent;
+	border: none transparent;
+	outline: none;
+	font-size: 15px;
+	font-family: 'Montserrat', sans-serif;
+	color: #333333;
+}
+
+/*==========================
+search-icon
+==========================*/
+
+.search-icon {
+	display: flex;
+	height: 35px;
+	width: 70px;
+	justify-content: center;
+	align-items: center;
+}
+
+.search-icon div {
+	position: relative;
+	width: 15px;
+	height: 15px;
+	border-radius: 50%;
+	border: 3px solid #AFAFAF;
+	transform: rotateZ(-135deg);
+}
+
+.search-icon div::after {
+	position: absolute;
+	content: '';
+	left: -13px;
+	top: 6px;
+	width: 12px;
+	height: 3px;
+	background: #AFAFAF;
+	border-radius: 50px;
+}
+
+/*==========================
+order-list
+==========================*/
 
 .order-list {
 	display: flex;
@@ -30,6 +97,11 @@
 	font-weight: 600;
 	margin-right: 20px;
 }
+
+
+/*==========================
+order-items
+==========================*/
 
 .order-items {
 	display: flex;
