fix css in filters

--- a/public/css/lib/card.css
+++ b/public/css/lib/card.css
@@ -3,6 +3,9 @@
 	box-shadow: 0 4px 6px rgba(0, 0, 0, 0.2);
 	border-radius: 10px;
 	transition: .3s;
+
+	overflow: auto;
+	max-height: 500px;
 }
 
 .card-hover:hover {
