--- a/public/css/catalog.css
+++ b/public/css/catalog.css
@@ -230,7 +230,6 @@ filters main
 }
 
 .filters {
-	display: inline-block;
 	width: 300px;
 	max-height: 100%;
 	background: #FFFFFF;
@@ -248,6 +247,13 @@ filters main
 	flex-wrap: nowrap;
 	justify-content: flex-start;
 	align-items: center;
+
+	max-height: 500px;
+	overflow: auto;
+}
+
+.filter-category::-webkit-scrollbar {
+	display: none;
 }
 
 
@@ -447,8 +453,6 @@ filters button category
 .filter-button-checkbox {
 	position: fixed;
 	top: 200px;
-
-
 }
 
 .filter-button {
