--- a/public/css/add-item.css
+++ b/public/css/add-item.css
@@ -1,4 +1,5 @@
 @import "lib/btn.css";
+@import "lib/input.css";
 
 .form-container {
 	flex: 1;
@@ -52,48 +53,6 @@ main fields and images
 }
 
 /*==========================
-input fields
-==========================*/
-
-.field {
-	flex: 1;
-	position: relative;
-	display: flex;
-	align-items: center;
-}
-
-.label-title {
-	display: inline-block;
-	width: 200px;
-	font-weight: 600;
-}
-
-input, select {
-	appearance:none;
-	flex: 1;
-	display: block;
-	height: 40px;
-	line-height: 40px;
-	padding: 0 10px;
-	margin: 5px 10px 5px 0;
-	border-radius: 10px;
-	border: 2px solid #D9D9D9;
-	background: #ffffff;
-	outline: none;
-	font-size: 15px;
-	font-family: 'Montserrat', sans-serif;
-	color: #333333;
-}
-
-input::placeholder {
-	color: #BBBBBB;
-}
-
-input::-webkit-calendar-picker-indicator {
-	opacity: 0;
-}
-
-/*==========================
 images
 ==========================*/
 
@@ -133,13 +92,55 @@ images
 	text-decoration: underline;
 }
 
+/*==========================
+image
+==========================*/
+
 .image-img {
+	position: relative;
 	width: 130px;
 	height: 130px;
 	margin: 10px;
 	object-fit: contain;
 	border-radius: 10px;
 	background: #ffffff;
+}
+
+.image-container {
+	display: inline-block;
+	position: relative;
+}
+
+.image-remove-btn {
+	position: absolute;
+	width: 20px;
+	height: 20px;
+	background: #DF0310;
+	right: 0;
+	top: 0;
+	border-radius: 50%;
+	cursor: pointer;
+}
+
+.image-remove-btn::before, .image-remove-btn::after {
+	position: absolute;
+	content: '';
+	top: 3px;
+	width: 14px;
+	height: 3px;
+	background: #ffffff;
+}
+
+.image-remove-btn::before {
+	left: 5px;
+	transform-origin: left;
+	transform: rotateZ(45deg);
+}
+
+.image-remove-btn::after {
+	right: 5px;
+	transform-origin: right;
+	transform: rotateZ(-45deg);
 }
 
 .no-images-title {
