--- a/public/css/404.css
+++ b/public/css/404.css
@@ -2,6 +2,7 @@
 	position: relative;
 	flex: 1;
 	width: 100%;
+	height: calc(100vh - var(--nav-height));
 	display: flex;
 	flex-direction: column;
 	align-items: center;
