--- a/public/css/login.css
+++ b/public/css/login.css
@@ -5,30 +5,42 @@
 .container {
 	flex: 1;
 	display: flex;
+	height: calc(100vh - var(--nav-height));
 	flex-direction: column;
 	align-items: center;
+	justify-content: center;
+	max-width: 700px;
 }
 
 .register-fields {
+	width: 100%;
 	margin-top: 30px;
 	display: flex;
 	flex-direction: column;
 }
 
-.label-input{
+.label-input {
+	flex: 1;
 	display: flex;
-	flex-direction: row;
-	padding: 5px;
-	justify-content: flex-end;
+	align-items: center;
 }
 
-.input-error{
-	display: flex;
+.label-title {
+	width: 100px;
+}
+
+.input-error {
+	flex: 1;
+	position: relative;
+	align-items: center;
 	flex-direction: column;
 	padding: 5px;
 }
-.label-error{
-	margin:5px;
+
+.label-error {
+	position: absolute;
+	display: flex;
+	white-space: nowrap;
 	padding-left: 10px;
 	color:red;
 	visibility: hidden;
@@ -36,11 +48,10 @@
 }
 
 .sign-in-title {
-	font-size: 40px;
+	font-size: 18px;
 	font-weight: 600;
 	margin-top: 30px;
 }
-
 
 .btn:active {
 	background: #e5e5e5;
@@ -50,15 +61,15 @@
 	outline: none;
 }
 
-.error{
+.error {
 	border-color: red;
 }
 
-.success{
+.success {
 	border-color: green;
 }
 
-.visible{
+.visible {
 	visibility: visible;
 }
 
