--- a/public/css/add-item.css
+++ b/public/css/add-item.css
@@ -7,6 +7,7 @@
 	display: flex;
 	flex-direction: column;
 	justify-content: space-between;
+	padding: 30px 50px;
 	max-width: 1300px;
 }
 
@@ -24,6 +25,7 @@ main fields and images
 .main-fields-and-images {
 	flex: 1;
 	display: flex;
+	align-items: flex-start
 }
 
 .main-fields {
