--- a/public/css/lib/btn.css
+++ b/public/css/lib/btn.css
@@ -45,3 +45,43 @@
 	background: #009AFF;
 	border-color: #009AFF;
 }
+
+/*==========================
+btn-back
+==========================*/
+
+.btn-back {
+	position: relative;
+	width: 20px;
+	height: 20px;
+	padding: 5px;
+	border-radius: 50%;
+	transform: rotateZ(90deg);
+	cursor: pointer;
+}
+
+.btn-back:hover {
+	background: #f7f7f7;
+}
+
+.btn-back::before, .btn-back::after {
+	content: '';
+	position: absolute;
+	top: 11px;
+	width: 12px;
+	height: 2px;
+	border-radius: 1in;
+	background: #333333;
+}
+
+.btn-back::before {
+	left: 7px;
+	transform-origin: left;
+	transform: rotateZ(45deg);
+}
+
+.btn-back::after {
+	right: 7px;
+	transform-origin: right;
+	transform: rotateZ(-45deg);
+}
