--- a/public/css/catalog.css
+++ b/public/css/catalog.css
@@ -1,8 +1,5 @@
-@import 'lib/card.css';
-@import 'lib/btn.css';
-@import 'lib/input.css';
-
 .container {
+	flex: 1;
 	display: flex;
 	flex-direction: column;
 	background: #F6F6F6;
@@ -157,7 +154,6 @@ rating
 	font-size: 18px;
 	font-weight: bold;
 	color: #333333;
-	white-space: nowrap;
 }
 
 /*==========================
