--- a/public/css/item.css
+++ b/public/css/item.css
@@ -376,17 +376,26 @@ item-reviews
 	flex-direction: column;
 }
 
+.similar-item-title {
+	font-size: 18px;
+	font-weight: 700;
+}
+
 .similar-item-cards-section{
 	display: flex;
 	flex-direction: row;
 }
 
-
+.similar-item-cards-arrow{
+	align-self: center;
+	margin-top: 3%;
+	cursor: default;
+}
 
 .similar-item-card {
-	display: flex;
+	display: none;
 	max-width: 48%;
-	margin: 1%;
+	margin: 4% 1% 1% 1%;
 
 }
 
@@ -418,6 +427,6 @@ item-reviews
 	margin: 5%;
 }
 
-.similar-item-inactive{
-	display: none;
+.similar-item-active{
+	display: flex;
 }
